--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,302 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Museum</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/favicon.svg"
+    >
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="container">
+        <a
+          href="#menu"
+          class="icon icon--menu top-bar__menu"
+        ></a>
+        <div class="header__wrapper">
+          <div class="header__image-block">
+            <div class="header__image">
+              <div class="top-bar__logo">
+                <a
+                  href="#"
+                  class="logo"
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="header__info-block">
+            <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+            <a href="#events" class="header__button button">КВИТКИ</a>
+          </div>
+        </div>
+      </div>
+      <div class="container header__events--mark-container">
+        <a href="#events" class="header__events--mark">ПОДІЇ</a>
+      </div>
+    </header>
+
+    <aside
+      class="page__menu menu"
+      id="menu"
+    >
+      <div class="container">
+        <div class="menu__wrapper">
+          <div class="menu__row">
+            <div class="top-bar menu__top">
+              <a
+                href="#"
+                class="icon icon--close"
+              ></a>
+            </div>
+            <div class="menu__bottom">
+              <nav class="nav menu__nav">
+                <ul class="nav__list">
+                  <li class="nav__item">
+                    <a
+                      class="nav__link"
+                      href="#gallery"
+                    >
+                      Галерея
+                    </a>
+                  </li>
+                  <li class="nav__item">
+                    <a
+                      class="nav__link"
+                      href="#subscription"
+                    >
+                      Про нас
+                    </a>
+                  </li>
+                  <li class="nav__item">
+                    <a
+                      class="nav__link"
+                      href="#events"
+                    >
+                      Виставки та <br> події
+                    </a>
+                  </li>
+                  <li class="nav__item">
+                    <a
+                      class="nav__link"
+                      href="#contacts">
+                      Контакти
+                    </a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+          <div class="menu__line"></div>
+
+          <div class="menu__schedule">
+            <p class="menu__text menu__text--title">Графік роботи</p>
+            <div class="menu__shedule-wrapper">
+              <p class="menu__text menu__text--schedule">
+                <span>12:00 — 20:00</span> середа <br>
+                <span>12:00 — 20:00</span> четвер <br>
+                <span>12:00 — 20:00</span> п’ятниця <br>
+                <span>11:00 — 19:00</span> субота <br>
+                <span>11:00 — 19:00</span> неділя
+              </p>
+              <p class="menu__text menu__weekend">
+                <span>Вихідні:</span> понеділок, вівторок
+                <br>Каса припиняє роботу за 1 годину
+                до закриття музею
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main class="page__section--wrapper">
+      <section class="events" id="events">
+        <div class="container">
+          <h2 class="events__title">Актуальні події</h2>
+          <div class="events__cards">
+            <div class="card card__exhibitions">
+              <img class="card__image"
+              src="./images/cards/card-1.png"
+              alt="card-1"
+              >
+              <div class="card__info">
+                <div class="card__info-row">
+                  <p class="card__text card__text--name">ВИСТАВКА</p>
+                  <p class="card__text card__text--date">26.08-29.11.2019</p>
+                </div>
+                <h3 class="card__text--title">Йду і повертаюсь</h3>
+                <p class="card__text card__text--description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+              </div>
+            </div>
+
+            <div class="card card__exhibitions">
+              <img class="card__image"
+              src="./images/cards/card-2.png"
+              alt="card-1"
+              >
+              <div class="card__info">
+                <div class="card__info-row">
+                  <p class="card__text card__text--name">ВИСТАВКА</p>
+                  <p class="card__text card__text--date">26.08-29.11.2019</p>
+                </div>
+                <h3 class="card__text--title">І спогади і мрії</h3>
+                <p class="card__text card__text--description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+              </div>
+            </div>
+
+            <div class="card card__lection">
+              <img class="card__image card__image--lection"
+              src="./images/cards/lection-1.png"
+              alt="lection-1"
+              >
+              <div class="card__cover">
+                <div class="card__lection--row">
+                  <p class="card__text card__text--name">ЛЕКЦІЯ</p>
+                  <p class="card__text card__text--date">26/08/2019 - 11:00</p>
+                </div>
+                <h3 class="card__lection--title">Від класицизму до <br> романтизму</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="gallery" id="gallery">
+        <div class="container">
+          <h2 class="gallery__title">Галерея</h2>
+          <div class="gallery__wrapper">
+            <div class="slider gallery__slider">
+              <img src="./images/gallery/photo-1.png"
+              alt="photo-1"
+              class="slider__image"
+              >
+
+              <img src="./images/gallery/photo-3.png"
+              alt="photo-3"
+              class="slider__image"
+              >
+
+              <img src="./images/gallery/photo-4.png"
+              alt="photo-4"
+              class="slider__image"
+              >
+
+              <img src="./images/gallery/photo-5.png"
+              alt="photo-5"
+              class="slider__image"
+              >
+            </div>
+            <div class="points gallery__points">
+              <div class="point point--active"></div>
+              <div class="point"></div>
+              <div class="point"></div>
+              <div class="point"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="subscription" id="subscription">
+        <div class="subscription__wrapper container">
+          <div class="subscription__text">
+            <h2 class="subscription__title">Підписка</h2>
+            <p class="subscription__description">Бути в курсі всіх актуальних подій та останніх новин.</p>
+          </div>
+
+          <form action="#" class="subscription__form">
+            <input class="input subscription__input"
+            type="email"
+            placeholder="E-mail"
+            required
+            >
+            <button class="button--small subscription__button"></button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer" id="contacts">
+      <div class="container footer__wrapper">
+        <div class="footer__srart">
+          <a href="#" class="logo footer__logo"></a>
+          <div class="footer__socials">
+            <a
+            target="_blank"
+            href="https://facebook.com"
+            class="icon icon--facebook"
+            ></a>
+
+            <a
+            target="_blank"
+            href="https://instagram.com"
+            class="icon icon--instagram"
+            ></a>
+          </div>
+        </div>
+
+        <div class="footer__center">
+          <div class="footer__shedule">
+            <p class="menu__text menu__text--title footer__text">Графік роботи</p>
+            <p class="menu__text menu__text--schedule footer__text">
+              <span>12:00 — 20:00</span> середа <br>
+              <span>12:00 — 20:00</span> четвер <br>
+              <span>12:00 — 20:00</span> п’ятниця <br>
+              <span>11:00 — 19:00</span> субота <br>
+              <span>11:00 — 19:00</span> неділя
+              <br>
+              <br><span>Вихідні:</span> понеділок, вівторок
+              <br>Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+          </div>
+
+          <div class="footer__contacts">
+            <p class="menu__text menu__text--title footer__text">Контакти:</p>
+            <p class="menu__text footer__text">
+              вул. М. Грушевського, 6; Київ, 01001
+              тел. +38 (044) 278-13-57
+              факс +38 (044) 278-74-54
+              e-mail: info@namu.kiev.ua
+            </p>
+
+          </div>
+        </div>
+
+        <div class="footer__line"></div>
+
+        <div class="footer__end">
+          <div class="footer__end--block footer__end--block-1">
+            <a href="#gallery" class="menu__text footer__text">Галерея</a>
+            <a href="#events" class="menu__text footer__text">Виставки та події</a>
+          </div>
+
+          <div class="footer__end--block footer__end--block-2">
+            <a href="#subscription" class="menu__text footer__text">Про Нас</a>
+            <a href="#contacts" class="menu__text footer__text">Контакти</a>
+          </div>
+        </div>
+
+        <div class="footer__copyright">
+          <p class="footer__copyright--text footer__copyright--text-1">Designed by Zhyriada Marina</p>
+          <p class="footer__copyright--text footer__copyright--text-2">Copyright © 2019. All Rights Reserved.</p>
+        </div>
+      </div>
+    </footer>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
