--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,263 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>NAMU — Художній Музей</title>
+    <link rel="icon" type="image/png"
+    href="images/icons/NA MU.svg">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body" id="page__body">
+    <header class="header">
+      <div class="container">
+        <div class="header__top">
+          <a href="#menu" class="icon icon__menu"></a>
+          <a href="#page__body" class="header__logo logo">
+                  na <br>mu
+          </a>
+        </div>
+        <div class="header__content">
+          <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <a href="#actual-event" class="header__button">
+              квитки <img src="images/icons/arrow_white-24px.svg" alt="arrow_right"
+              class="header__button-arrow">
+          </a>
+          <a href="#actual-event" class="header__events">події </a>
+        </div>
+      </div>
+    </header>
+
+    <aside class="menu page__menu" id="menu">
+      <div class="menu__content">
+        <div class="container">
+          <div class="menu__block">
+            <div class="menu__top">
+              <a href="#" class="icon icon__is-closed"></a>
+              <nav class="nav">
+                <ul class="nav__list">
+                  <li class="nav__item">
+                    <a href="#gallery" class="nav__link">Галерея </a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#email" class="nav__link">Про Нас </a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#actual-event" class="nav__link">Виставки та події </a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#contact" class="nav__link">Контакти </a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+            <span class="menu__line"></span>
+            <div class="menu__bottom">
+              <div class="menu__bottom-title">Графік роботи</div>
+              <div class="menu__schedule">
+                <div class="menu__schedule-info">
+                  <strong>12:00 — 20:00</strong>
+                    середа <br>
+                  <strong>12:00 — 20:00</strong>
+                    четвер <br>
+                  <strong>12:00 — 20:00</strong>
+                    п’ятниця <br>
+                  <strong>11:00 — 19:00</strong>
+                    субота <br>
+                  <strong>11:00 — 19:00</strong>
+                    неділя
+                </div>
+                <p class="menu__schedule-weekends">
+                  <strong>Вихідні:</strong>
+                    понеділок, вівторок <br>Каса припиняє роботу за 1 годину до закриття музею
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+    <main class="main">
+      <section class="actual-event" id="actual-event">
+        <div class="container">
+          <h2 class="section-title">Актуальні події</h2>
+          <div class="actual-event__cards">
+            <acticle class="card">
+              <img src="images/field.jpg" alt="Йду і повертаюсь"
+              class="card__img">
+              <div class="card__bottom">
+                <div class="card__label">
+                  <span class="card__label-title">виставка</span>
+                  <span class="card__label-date">26.08-29.11.2019</span>
+                </div>
+                <div class="card__title-block">
+                  <h3 class="card__title">Йду і повертаюсь</h3>
+                  <span class="card__rectangle"></span>
+                </div>
+                <p class="card__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років. </p>
+              </div>
+            </acticle>
+            <acticle class="card">
+              <img src="images/girl.jpg" alt="І спогади і мрії"
+              class="card__img">
+              <div class="card__bottom">
+                <div class="card__label">
+                  <span class="card__label-title">ВИСТАВКА</span>
+                  <span class="card__label-date">26.08-29.11.2019</span>
+                </div>
+                <div class="card__title-block">
+                  <h3 class="card__title">І спогади і мрії</h3>
+                  <span class="card__rectangle"></span>
+                </div>
+                <p class="card__description">Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії». </p>
+              </div>
+            </acticle>
+          </div>
+        </div>
+      </section>
+      <section class="lection">
+        <div class="container">
+          <div class="lection__block">
+            <div class="lection__content">
+              <div class="lection__label">
+                <span class="lection__label-title">ЛЕКЦІЯ</span>
+                <span class="lection__label-date">26/08/2019 - 11:00</span>
+              </div>
+              <h3 class="lection__title">Від класицизму до романтизму</h3>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="gallery" id="gallery">
+        <div class="container">
+          <h2 class="section-title">Галерея</h2>
+          <div class="gallery__content">
+            <img src="images/panna.jpg" alt="Картина 'Наречена' написана Кричевським Федором Григоровичем"
+            class="gallery__image gallery__img--height-1 gallery__img-1">
+            <img src="images/winter.jpg" alt="Картина 'Українське село взимку' написана Левченком"
+            class="gallery__image gallery__img--height-1 gallery__img-2">
+            <img src="images/street.jpg" alt="Картина 'Сонячний день' написана Киріаком Костянтиновичем Костанді"
+            class="gallery__image gallery__img--height-2 gallery__img-3">
+            <img src="images/sea.jpg" alt="Картина 'На морі' написана Миколою Петровичем Глущенком"
+            class="gallery__image gallery__img--height-2 gallery__img-4">
+          </div>
+        </div>
+        <div class="gallery__swiper swiper">
+          <div class="swiper-wrapper">
+            <div class="gallery__item swiper-slide">
+              <img src="images/panna.jpg" alt="Картина 'Наречена' написана Кричевським Федором Григоровичем"
+              class="gallery__image gallery__image--swiper">
+            </div>
+            <div class="gallery__item swiper-slide">
+              <img src="images/geese.png" alt="Картина 'Гусиn' написана Борисом Сердюком"
+              class="gallery__image gallery__image--swiper">
+            </div>
+            <div class="gallery__item swiper-slide">
+              <img src="images/winter.jpg" alt="Картина 'Українське село взимку' написана Левченком"
+              class="gallery__image gallery__image--swiper">
+            </div>
+            <div class="gallery__item swiper-slide">
+              <img src="images/street.jpg" alt="Картина 'Сонячний день' написана Киріаком Костянтиновичем Костанді"
+              class="gallery__image gallery__image--swiper">
+            </div>
+            <div class="gallery__item swiper-slide">
+              <img src="images/sea.jpg" alt="Картина 'На морі' написана Миколою Петровичем Глущенком"
+              class="gallery__image gallery__image--swiper">
+            </div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+      </section>
+      <section class="subscribe" id="email">
+        <div class="container">
+          <div class="subscribe__content">
+            <div class="subscribe__top">
+              <h2 class="subscribe__title">Підписка</h2>
+              <p class="subscribe__description">Бути в курсі всіх актуальних подій та останніх новин. </p>
+            </div>
+            <form class="subscribe__form" name="email"
+            onsubmit="this.reset(); return false;">
+              <input type="email" class="subscribe__input"
+              placeholder="E-mail" required>
+              <button type="submit" class="subscribe__button"></button>
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__top">
+            <a href="#page__body" class="footer__logo logo">
+              na <br>mu
+            </a>
+            <div class="footer__icons">
+              <a href="#https://www.facebook.com/namu.museum/?locale=uk_UA" class="icon icon__facebook"
+              target="_blank"></a>
+              <a href="#https://www.instagram.com/namu.museum/" class="icon icon__instagram"
+              target="_blank"></a>
+            </div>
+          </div>
+          <div class="footer__middle">
+            <div class="footer__schedule">
+              <div class="footer__schedule-title">Графік роботи</div>
+              <div class="footer__schedule-description">
+                <strong>12:00 — 20:00</strong>
+                середа <br>
+                <strong>12:00 — 20:00</strong>
+                четвер <br>
+                <strong>12:00 — 20:00</strong>
+                п’ятниця <br>
+                <strong>11:00 — 19:00</strong>
+                субота <br>
+                <strong>11:00 — 19:00</strong>
+                неділя <br>
+                <br>
+                Вихідні: понедилок, вивторок <br>Каса припиняє роботу за 1 годину до закриття музею
+              </div>
+            </div>
+            <div class="contact" id="contact">
+              <div class="contact__title">Контакти:</div>
+              <div class="contact__description">
+                <a href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.449395,30.5307834,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.449395!4d30.5307834!16s%2Fg%2F11l76wtstx?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D" class="contact__link">вул. М. Грушевського, 6; Київ, 01001 </a>
+                <br>
+                <a href="tel:+38 (044) 278-13-57" class="contact__link">тел. +38 (044) 278-13-57 </a>
+                <br>
+                <a href="tel:+38 (044) 278-74-54" class="contact__link">факс +38 (044) 278-74-54 </a>
+                <br>
+                <a href="mailto:info@namu.kiev.ua" class="contact__link">e-mail: info@namu.kiev.ua </a>
+              </div>
+            </div>
+          </div>
+          <a href="#page__body" class="footer__up-btn"></a>
+          <span class="footer__line"></span>
+          <nav class="footer__nav nav">
+            <ul class="nav__list nav__list--gap">
+              <li class="nav__item">
+                <a href="#gallery" class="nav__link nav__link--color">Галерея </a>
+              </li>
+              <li class="nav__item">
+                <a href="#email" class="nav__link nav__link--color">Про Нас </a>
+              </li>
+              <li class="nav__item">
+                <a href="#actual-event" class="nav__link nav__link--color">Виставки та події </a>
+              </li>
+              <li class="nav__item">
+                <a href="#contact" class="nav__link nav__link--color">Контакти </a>
+              </li>
+            </ul>
+          </nav>
+          <div class="footer__bottom">
+            <p>Designed by Zhyriada Marina</p>
+            <p>Copyright © 2019. All Rights Reserved.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="scripts/main.js"></script>
   </body>
 </html>
